# chess

./: .gitignore  CMakeLists.txt  README.md  bishop.cpp  bishop.hh  chess.pro  chess_icons.qrc  knight.cpp  main.cpp
src/: bishop.cpp  chess.cpp  chess.hh  chessboard.cpp  chessboard.hh  chesspiece.cpp  chesspiece.hh  king.cpp  king.hh  knight.hh  main.cpp  mainwindow.cpp  mainwindow.hh  menuwindow.cpp  menuwindow.hh  move_utils.cpp  move_utils.hh  pawn.cpp  pawn.hh  queen.cpp  queen.hh  rook.cpp  rook.hh
